--- a/streamlist.css
+++ b/streamlist.css
@@ -1,3 +1,3 @@
-span.streamlist a {color:#333;background:#fafafa;display:block;padding:5px;}
+span.streamlist a {color:#333;background:#fafafa;display:block;padding:5px;text-decoration:none;}
 span.streamlist a:hover {background:#eee;}
 span.streamlist.active a {color:#333;background:#eee;font-weight:bold;}
